--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,10 +4,21 @@
                 <div class="post">
                     <div class="date">
                         <p>Опубликовано: {{ post.published_date }}</p>
-                    </div>
-                    <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+                    </div>   
+                    <h1><a href="{% url 'post_detail' pk=post.pk %}">     
+                    {{ post.title }}</a></h1>   
 
                     <p>{{ post.text|linebreaksbr }}</p>
                 </div>
             {% endfor %}
+
+<div class="rectangle"></div>
+<div>
+<input type="text", class = edit1 size="5">
+<input type="text", class = edit2 size="5">
+<input type="text", class = edit_result size="5" readonly>
+<p class= text_plus><big><big><big><big>+</big></big></big></big></p>
+<p class= text_equal><big><big><big><big>=</big></big></big></big></p>
+<input type="button" value=" Результат ", class = button>
+</div>
   {% endblock %}        
