--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,6 +6,71 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+      <style>
+   .edit1 {
+    position: fixed; /* Фиксированное положение */
+    right: 450px; /* Расстояние от правого края окна браузера */
+    top: 40%; /* Расстояние сверху */
+
+   #padding: 10px; /* Поля вокруг текста */ 
+   # background: #ffe; /* Цвет фона */ 
+    border: 1px solid #333; /* Параметры рамки */ 
+
+   }
+
+   .edit2 {
+    position: fixed; /* Фиксированное положение */
+    right: 350px; /* Расстояние от правого края окна браузера */
+    top: 40%; /* Расстояние сверху */
+
+   #padding: 10px; /* Поля вокруг текста */ 
+   # background: #ffe; /* Цвет фона */ 
+    border: 1px solid #333; /* Параметры рамки */ 
+
+   }
+   
+   .edit_result {
+    position: fixed; /* Фиксированное положение */
+    right: 250px; /* Расстояние от правого края окна браузера */
+    top: 40%; /* Расстояние сверху */
+
+   #padding: 10px; /* Поля вокруг текста */ 
+   # background: #ffe; /* Цвет фона */ 
+    border: 1px solid #333; /* Параметры рамки */ 
+
+   }
+
+   .text_plus {
+    height: 100000px;
+    position: fixed; /* Фиксированное положение */
+    right: 420px; /* Расстояние от правого края окна браузера */
+    top: 38.5%; /* Расстояние сверху */
+    }
+ 
+    .text_equal {
+    height: 100000px;
+    position: fixed; /* Фиксированное положение */
+    right: 320px; /* Расстояние от правого края окна браузера */
+    top: 38.5%; /* Расстояние сверху */
+    }
+  
+
+   .rectangle {
+    position: fixed;
+    width: 420px;
+    height: 320px;
+    background: #aaaaaa;
+    right: 150px;
+    top: 30%;
+    }
+
+    .button {
+    position: fixed; /* Фиксированное положение */
+    right: 320px; /* Расстояние от правого края окна браузера */
+    top: 50%; /* Расстояние сверху */
+    }
+    </style>
+
     </head>
     <body>
          <div class="page-header">
