--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,38 +7,38 @@
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
       <style>
-   .edit1 {
-    position: fixed; /* Фиксированное положение */
-    right: 450px; /* Расстояние от правого края окна браузера */
-    top: 40%; /* Расстояние сверху */
+ <!-- .edit1 { -->
+ <!--   position: fixed; /* Фиксированное положение */-->
+ <!--  right: 450px; /* Расстояние от правого края окна браузера */-->
+ <!--   top: 40%; /* Расстояние сверху */-->
 
-   #padding: 10px; /* Поля вокруг текста */ 
-   # background: #ffe; /* Цвет фона */ 
-    border: 1px solid #333; /* Параметры рамки */ 
+   <!--padding: 10px; /* Поля вокруг текста */ -->
+<!--  background: #ffe; /* Цвет фона */ -->
+ <!--   border: 1px solid #333; /* Параметры рамки */ -->
 
-   }
+<!--  }-->
 
-   .edit2 {
-    position: fixed; /* Фиксированное положение */
-    right: 350px; /* Расстояние от правого края окна браузера */
-    top: 40%; /* Расстояние сверху */
+   <!--.edit2 {-->
+   <!--position: fixed; /* Фиксированное положение */-->
+    <!--right: 350px; /* Расстояние от правого края окна браузера */-->
+   <!--top: 40%; /* Расстояние сверху */-->
 
-   #padding: 10px; /* Поля вокруг текста */ 
-   # background: #ffe; /* Цвет фона */ 
-    border: 1px solid #333; /* Параметры рамки */ 
+  <!--padding: 10px; /* Поля вокруг текста */ -->
+   <!-- background: #ffe; /* Цвет фона */ -->
+ <!--   border: 1px solid #333; /* Параметры рамки */ -->
 
-   }
+ <!-- }-->
    
-   .edit_result {
-    position: fixed; /* Фиксированное положение */
-    right: 250px; /* Расстояние от правого края окна браузера */
-    top: 40%; /* Расстояние сверху */
+ <!--  .edit_result {-->
+ <!--   position: fixed; /* Фиксированное положение */-->
+ <!--   right: 250px; /* Расстояние от правого края окна браузера */-->
+ <!--   top: 40%; /* Расстояние сверху */-->
 
-   #padding: 10px; /* Поля вокруг текста */ 
-   # background: #ffe; /* Цвет фона */ 
-    border: 1px solid #333; /* Параметры рамки */ 
+   <!--padding: 10px; /* Поля вокруг текста */ -->
+   <!-- background: #ffe; /* Цвет фона */ -->
+  <!--  border: 1px solid #333; /* Параметры рамки */ -->
 
-   }
+ <!--  }-->
 
    .text_plus {
     height: 100000px;
