--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -18,10 +18,9 @@
 <!--<input type="text", class = edit2 size="5">  -->
 <!--<input type="text", class = edit_result size="5" readonly> -->
 {% csrf_token %}
-
 {{answer}}
-{{form}}
-{{ form.as_p }}
+{{answer1}}
+
 <p class= text_plus><big><big><big><big>+</big></big></big></big></p>
 <p class= text_equal><big><big><big><big>=</big></big></big></big></p>
 <input type="submit" value=" Результат ", class = button>
