--- a/blog/templates/blog/test.html
+++ b/blog/templates/blog/test.html
@@ -9,11 +9,12 @@
               <div>
 
               {% csrf_token %}
-
+              <input type="submit" value=" Результат ", class = button>
               {{answer}}
+              {{answer1}}
             
 
-              <input type="submit" value=" Результат ", class = button>
+              
               </div>
          </form>
                     
