rest django generic

--- a/blog/templates/blog/test.html
+++ b/blog/templates/blog/test.html
@@ -5,13 +5,14 @@
 
     </head>
     <body>
+         {{edits1}}
          <form method = "POST", action = "">
               <div>
 
               {% csrf_token %}
               <input type="submit" value=" Результат ", class = button>
-              {{answer}}
-              {{answer1}}
+              
+              {{edits1}}
             
 
               
